fix: menu overlap

--- a/style.css
+++ b/style.css
@@ -53,7 +53,10 @@ a {
 
 #header.sticky {
     position: fixed;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .5);
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2000;
 }
 
 .site-title {
@@ -117,6 +120,12 @@ a {
     border-radius: 12px;
     cursor: pointer;
     transition: transform .3s;
+}
+
+.thumbnails img,
+.gallery img {
+    position: relative;
+    z-index: 0;
 }
 
 .thumbnails img:hover {
